trunk/Archive2/cc/d12ba1a891d4f1/output
main.cpp: In function 'int main()':
main.cpp:13:15: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
     test()[0] = "h";
               ^
